<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mohammed</groupId>
  <artifactId>automation-engine</artifactId>
  <version>0.1.1-beta.1</version>
  <name>Selenium Automation Engine</name>
  <url>https://github.com/Mohammed2023-224/SeleniumAutomation</url>
    <description>
        A comprehensive Selenium-based test automation framework with
        property management, email testing, API testing, and reporting capabilities.
        Includes utilities for WebDriver management, configuration reading,
        and test data generation.
    </description>
    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Mohammed</name>
            <email>mohamed.abdelhakim.ahmed1@gmail.com</email>
            <roles>
                <role>Developer</role>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/Mohammed2023-224/SeleniumAutomation.git</connection>
        <developerConnection>scm:git:ssh://github.com:Mohammed2023-224/SeleniumAutomation.git</developerConnection>
        <url>https://github.com/Mohammed2023-224/SeleniumAutomation</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Mohammed2023-224/SeleniumAutomation</url>
        </repository>
    </distributionManagement>

    <properties>
        <selenium.version>4.38.0</selenium.version>
        <testng.version>7.11.0</testng.version>
        <log4j2API.version>3.0.0-beta2</log4j2API.version>
        <log4j2Core.version>3.0.0-beta2</log4j2Core.version>
        <apache.poi.version>5.4.1</apache.poi.version>
        <jackson.version>2.15.2</jackson.version>
        <lombok.version>1.18.38</lombok.version>
        <RestAssured.version>5.3.0</RestAssured.version>
        <aspectJ.version>1.9.7</aspectJ.version>
        <allure.version>2.32.0</allure.version>
        <!--    <allureMavenPlugin.version>2.11.2</allureMavenPlugin.version>-->
        <mavenSureFirePlugin.version>3.2.5</mavenSureFirePlugin.version>
        <faker.version>1.0.2</faker.version>
        <jakarta.version>2.0.1</jakarta.version>
        <awaitility.version>4.2.0</awaitility.version>
        <testng.xml>src/main/resources/xml/testng.xml</testng.xml>
        <javax.version>1.6.2</javax.version>
        <javaxActivation.version>1.1.1</javaxActivation.version>
        <googleAPIClient.version>1.31.5</googleAPIClient.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

  <build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-surefire-plugin</artifactId>
      <version>${mavenSureFirePlugin.version}</version>
      <configuration>
          <suiteXmlFiles>
            <suiteXmlFile>${testng.xml}</suiteXmlFile>
        </suiteXmlFiles>
      </configuration>
    </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
              <source>21</source>
              <target>21</target>
          </configuration>
      </plugin>
  </plugins>

      <resources>
        <resource>
          <directory>src/main/resources</directory>
        </resource>
      </resources>
    </build>
  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j2Core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <version>${aspectJ.version}</version>
      <scope>runtime</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j2API.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${apache.poi.version}</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>

      <dependency>
          <groupId>io.rest-assured</groupId>
          <artifactId>rest-assured</artifactId>
          <version>${RestAssured.version}</version>
      </dependency>

    <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
    <dependency>
      <groupId>com.mailosaur</groupId>
      <artifactId>mailosaur-java</artifactId>
      <version>8.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.apis</groupId>
      <artifactId>google-api-services-gmail</artifactId>
      <version>v1-rev110-1.25.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.http-client</groupId>
      <artifactId>google-http-client-jackson2</artifactId>
      <version>1.40.1</version>
    </dependency>
    <dependency>
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
      <version>${googleAPIClient.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.oauth-client</groupId>
      <artifactId>google-oauth-client-jetty</artifactId>
      <version>1.31.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.eclipse.angus/angus-mail -->
<!--    <dependency>-->
<!--      <groupId>org.eclipse.angus</groupId>-->
<!--      <artifactId>angus-mail</artifactId>-->
<!--      <version>2.0.3</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.17.2</version> <!-- or latest -->
    </dependency>

    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${awaitility.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.mail</groupId>
      <artifactId>javax.mail-api</artifactId>
      <version>${javax.version}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>${javax.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${javaxActivation.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
    <dependency>
      <groupId>com.github.javafaker</groupId>
      <artifactId>javafaker</artifactId>
      <version>${faker.version}</version>
    </dependency>
  </dependencies>

    <!-- Used to change structure -->
<!--
    <build>
        <sourceDirectory>folder1</sourceDirectory>
        <testSourceDirectory>folder2</testSourceDirectory>

        <resources>
            <resource>
                <directory>folder1-resources</directory>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>folder2-resources</directory>
            </testResource>
        </testResources>
    </build>
    -->
</project>
